# Boltwork

./: DEPLOY.md  Dockerfile  README.md  README_1.md  aperture-phase2.yaml  aperture.yaml  boltwork_usage_report.py  check_health.py  fix_flydeploy.py  fly.toml  main.py  pyproject.toml  release.bat  release.py  requirements.txt  review.py  setup_lightning.py  start.sh  test_boltwork.ps1  usage-report.yml  write_aperture.py  write_deploy_files.py
.github/scripts/: check_health.py  daily-health-check.yml
.github/workflows/: daily-health-check.yml  deploy.yml  publish-mcp.yml
Flytest/: Dockerfile  app.py  fly.toml  nginx.conf  start.sh
aperture-app/: Dockerfile  Dockerfile.aperture  aperture.yaml  entrypoint.sh  fly.aperture.toml  fly.lnd.toml  start.sh
lnbits/: README.md  fly.toml
lnd-app/: Dockerfile  Dockerfile.lnd  fly.toml  lnd.conf  nginx.conf  start.sh
routers/: admin.py  analyse.py  company.py  credits.py  demo.py  executor.py  extract.py  gateway.py  memory.py  pay.py  regulatory.py  suggest.py  trial.py  workflow.py
src/: README.md  pyproject.toml
src/boltwork_mcp/: __init__.py  payment.py  server.py
tests/: conftest.py  test_api.py  test_review.py
